Revision history for {{$dist->name}}

{{$NEXT}}

2.05      2014-07-18 07:43:54 -0400
  - ensure that is_symbol_table is set when adding file to an
    archive.  This fixes a intermitent bug introduced in 2.04

2.04      2014-07-17 12:55:50 -0400
  - added "symbols" option
  - compatability with Archive::Ar 2.02 API

2.03      2014-07-08 06:49:30 -0400
  - fixed common format failure on OpenBSD i386 (GH#15)

2.02_01   2014-06-25 05:42:15 -0400
  - added extra diagnostic for t/common.t to try and help flush
    out gh#15

2.02      2014-06-20 08:06:25 -0400
  - fix tests for MSWin32

2.01      2014-06-19 12:22:35 -0400
  - fixed regression involving archive_write_finish and archive_write_free
    on older versions of libarchive
  - remove workarounds for broken Alien::Base stuff
  - require Alien::Libarchive 0.20

2.00      2014-06-18 10:14:24 -0400
  - this version serves primarily to bring the API in line with
    Archive::Ar 2.00
  - added methods
    - set_opt
    - get_opt
    - clear
    - get_data
    - chmod
    - chown
    - type
    - rename
    - extract
    - extract_filename
    - error
    - contains_file
  - deprecated methods
    - DEBUG
    - set_output_format_bsd
    - set_output_format_svr4
  - Archive::Ar::Libarchive now optionally exports type constants
    COMMON (referred to as "svr4" previous versions), GNU and BSD
  - type detection: after reading an archive the type method
    will tell you the type of ar file.
  - output format defaults to input format
  - read and write methods will now accept a file handle or IO::Handle
    object
  - GNU format is now supported for output

0.12      2014-06-10 10:02:28 -0400
  - borrow new test t/50empty.t from Archive::Ar
  - Alien::Libarchive 0.19 compatability

0.11      2014-02-14 12:05:42 -0500
  - use archive_read_next_header if archive_read_next_header2 is not available
    (should help with older versions of libarchive)

0.10      2014-02-12 07:35:15 -0500